# sca-sbom-tests

./: NOTICE  README.md
.github/workflows/: anchore-syft.yml  microsoft-sbom-tool.yml  ort.yml
bower/: bower.json
maven-best-practices/: pom.xml
maven-best-practices/src/org/oss-review-toolkit/: App.java
npm-best-practices/: index.js  package.json
npm/node-modules/: package.json
npm/package-lock/: package.json
npm/shrinkwrap/: package.json
pip-best-pratices/pyproject-toml/: pyproject.toml
pip-best-pratices/requirements-txt/: setup.py
pip-best-pratices/setup-py/: setup.py
pip-best-pratices/setup-py/src/: main.py
