[project]
name = "pyproject-best-practices"
version = "0.0.1"
description = "An python project that follows provenance metadata best practices."
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "ORT Contributors", email = "opensource@steenbe.nl"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.4.3",
]
[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "tox>=3.25.1"
]
[project.urls]
Homepage = "https://github.com/tsteenbe/sca-sbom-tests"
Repository = "https://github.com/tsteenbe/sca-sbom-tests"
BugTracker = "https://github.com/tsteenbe/sca-sbom-tests/issues"
